# trimly

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml  run.py  wsgi.py
backend/app/: __init__.py
backend/app/config/: __init__.py  database.py  settings.py  swagger.py
backend/app/controllers/: __init__.py  url_controller.py
backend/app/models/: __init__.py  url.py
backend/app/schemas/: __init__.py  url.py
backend/app/services/: __init__.py  url_service.py
backend/app/utils/: __init__.py  code_generator.py
backend/migrations/: env.py
backend/migrations/versions/: 3a0f0138b83f_add_click_count.py  969ce9c2610c_create_urls_table.py
backend/tests/: conftest.py
backend/tests/integration/: test_create_app.py  test_url_controller.py
backend/tests/unit/config/: test_database.py
backend/tests/unit/services/: test_url_service_db.py  test_url_service_validate.py
backend/tests/unit/utils/: test_code_generator.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  material-theme.scss  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/interceptors/: error.interceptor.spec.ts  error.interceptor.ts
frontend/src/app/core/models/: api-error.model.ts  url.model.ts
frontend/src/app/core/services/: clipboard.service.spec.ts  clipboard.service.ts  notification.service.ts  url.service.spec.ts  url.service.ts
frontend/src/environments/: environment.development.ts  environment.model.ts  environment.ts
(+36 files in other folders)
