[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/**/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
precision = 2
